FM added more validation to lift counts

--- a/app/views/facilities_management/buildings/units_of_measurement.html.erb
+++ b/app/views/facilities_management/buildings/units_of_measurement.html.erb
@@ -36,13 +36,20 @@
         <h2 class="govuk-heading-m govuk-!-margin-bottom-0">How many lifts do you have in this building?</h2>
         <h2 class="govuk-caption-m govuk-!-margin-top-1">For example, 5. Enter the total number of lifts in your
           building</h2>
-        <input id="fm-uom-number-of-lifts" class="govuk-input govuk-input--width-5" type="number" value="">
+
+        <div id="fm-uom-number-of-lifts-error-form-group" class="govuk-form-group">
+          <span id="fm-uom-number-of-lifts-error" class="govuk-error-message govuk-visually-hidden">
+            Invalid number of lifts
+          </span>
+          <input id="fm-uom-number-of-lifts" class="govuk-input govuk-input--width-5" type="number" value="">
+        </div>
+
         <div id="fm-lift-floors-container" class="govuk-!-margin-top-6 govuk-visually-hidden">
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
               <h2 class="govuk-heading-m govuk-!-margin-bottom-0"><%= @uom_title %> </h2>
               <h2 class="govuk-caption-m govuk-!-margin-top-1"><%= @uom_example %> </h2>
-              <div id="fm-lift-floors-input-container" >
+              <div id="fm-lift-floors-input-container">
 
               </div>
             </div>
