--- a/app/views/facilities_management/summary/index.html.erb
+++ b/app/views/facilities_management/summary/index.html.erb
@@ -13,26 +13,34 @@
   <p class="govuk-!-font-size-36">
     <%=raw lot_title%>
   </p>
-  <p>
 
-  <%=raw list_services %>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full ccs-results-list__detail">'
+      <div>
+        <span class="govuk-!-font-size-27 ccs-font--wrap">
+      <%=raw list_services %>
 
-  <!------->
-  </p>
-  <p/>
-  <% if !@current_lot.nil? %>
-  <div class="">
-    <p><strong>You can now download the supplier list and requirements document</strong></p>
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        This list will be saved and it will be available for you later, for up to 60 days from today.
-      </strong>
+        </span>
+      </div>
     </div>
-    <p class="govuk-body govuk-body-s supplier-record__print-option">
-      <a class="supplier-record__file-download ga-download-calculator" aria-label="Download supplier list and Deliverables Matrix Lite" href="/facilities-management/summary?calculations=yes&amp;format=xlsx&amp;job_type=qt&amp;looking_for=worker&amp;payroll_provider=agency&amp;postcode=sw1p+2ba&amp;term=8_12&amp;worker_type=agency_supplied">Download supplier list and Deliverables Matrix Lite</a>
-    </p>
+  </div>
+
+
+  <% if !@current_lot.nil? %>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full ccs-results-list__detail">
+      <p><strong>You can now download the supplier list and requirements document</strong></p>
+      <div class="govuk-warning-text">
+        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+        <strong class="govuk-warning-text__text">
+          <span class="govuk-warning-text__assistive">Warning</span>
+          This list will be saved and it will be available for you later, for up to 60 days from today.
+        </strong>
+      </div>
+      <p class="govuk-body govuk-body-s supplier-record__print-option">
+        <a class="supplier-record__file-download ga-download-calculator" aria-label="Download supplier list and Deliverables Matrix Lite" href="/facilities-management/summary?calculations=yes&amp;format=xlsx&amp;job_type=qt&amp;looking_for=worker&amp;payroll_provider=agency&amp;postcode=sw1p+2ba&amp;term=8_12&amp;worker_type=agency_supplied">Download supplier list and Deliverables Matrix Lite</a>
+      </p>
+    </div>
   </div>
   <% end %>
 
@@ -61,6 +69,8 @@
       </fieldset>
     </div>
     <%= submit_tag t('common.submit'), class: "govuk-button" %>
+
+    <%= hidden_field_tag 'current_choices', TransientSessionInfo[session.id].to_json  %>
   </form>
   <% end %>
 
