--- a/app/views/facilities_management/summary/index.html.erb
+++ b/app/views/facilities_management/summary/index.html.erb
@@ -5,7 +5,7 @@
     <strong class="govuk-heading-xl"><%= title %></strong>
   </fieldset>
   <p class="govuk-!-font-size-36">
-    <%=raw suppliers_title%>
+    <%=raw services_and_suppliers_title%>
   </p>
   <p class="govuk-!-font-size-36">
     Your assessed value is <%=number_to_currency(@report.sum_uom + @report.sum_benchmark, strip_insignificant_zeros: true)%> for the contract term of 7 years.
@@ -15,7 +15,7 @@
   </p>
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full ccs-results-list__detail">'
+    <div class="govuk-grid-column-full ccs-results-list__detail">
       <div>
         <span class="govuk-!-font-size-27 ccs-font--wrap">
       <%=raw list_services %>
