display choices and fix FM calculator

--- a/app/views/facilities_management/summary/index.html.erb
+++ b/app/views/facilities_management/summary/index.html.erb
@@ -23,6 +23,7 @@
             <%=raw list_services %>
           <% else %>
             <%=raw list_suppliers %>
+            <%=raw list_choices %>
           <% end %>
 
         </span>
