FM-101 Lift validation changes

--- a/app/views/errors/_inline_error_summary.html.erb
+++ b/app/views/errors/_inline_error_summary.html.erb
@@ -5,7 +5,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="<%= @inline_error_summary_body_href %>"><%= @inline_summary_error_text %></a>
+        <a id="error-summary-link" href="<%= @inline_error_summary_body_href %>"><%= @inline_summary_error_text %></a>
       </li>
     </ul>
   </div>
