FM-101 max lifts set to 20

--- a/app/views/facilities_management/buildings/units_of_measurement.html.erb
+++ b/app/views/facilities_management/buildings/units_of_measurement.html.erb
@@ -39,7 +39,7 @@
 
         <div id="fm-uom-number-of-lifts-error-form-group" class="govuk-form-group">
           <span id="fm-uom-number-of-lifts-error" class="govuk-error-message govuk-visually-hidden">
-            Invalid number of lifts
+            Invalid number of lifts (maximum 20 per building)
           </span>
           <input id="fm-uom-number-of-lifts" class="govuk-input govuk-input--width-5" type="number" value="">
         </div>
