FM-78 selected regions list width adjustment

--- a/app/assets/stylesheets/facilities_management/long_list.scss
+++ b/app/assets/stylesheets/facilities_management/long_list.scss
@@ -41,3 +41,11 @@
     padding-left: 5px;
   }
 }
+
+.CCS-fm-regions-selected-label {
+  background-color: white;
+  overflow-wrap: break-word;
+  max-width: 255px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
